# eelu-login

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
eelu-login/: Cargo.toml
eelu-login/src/: main.rs
eelu-login/src/cli/: arg_parser.rs  cli_session.rs  mod.rs
sis-login/: Cargo.toml  README.md
sis-login/src/: headers_builder.rs  lib.rs
sis-login/src/sis/: mod.rs  utils.rs
sis-login/src/sis/types/: mod.rs  sis_response.rs  user_type.rs
src/: main.rs
src/cli/: arg_parser.rs  cli_session.rs
src/sis/: login.rs  mod.rs
src/sis/types/: mod.rs  sis_response.rs  user_type.rs
src/utils/: client.rs  cookie_parser.rs  mod.rs
