[package]
name = "eelu-login"
version = "0.1.0"
edition = "2021"
authors = ["Eslam Muhammad , github_username: 0xCrypt00o ,  email: 0xCrypt00o@protonmail.com"]
description ="EELU Moodle Login University moodle-login through sis"
repository = "https://github.com/Crypt00o/eelu-login"
license = "MIT OR Apache-2.0"
keywords = ["eelu", "EELU","eelu moodle","moodle"]
homepage ="https://github.com/Crypt00o/eelu-login/README.md"
documentation = "https://github.com/Crypt00o/eelu-login/README.md"
readme = "README.md"

[dependencies]
tokio={version="1.27.0",features=["full"]}
serde={version="1.0.159",features=["serde_derive"]}
reqwest = { version = "0.11.16", features = ["json"] }
