[package]
name = "sis-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={ version="1.27.0", default-features=false, features=["full"] }
serde={ version="1.0.159", default-features=false, features=["serde_derive"] }
reqwest = { version = "0.11.16", default-features=false , features = ["json","rustls-tls"] }
rustls = { version = "0.21.0", default-features = false }
log = { version = "0.4.17", optional = true }
env_logger = { version = "0.10.0", optional = true }

[features]
debug = ["log", "env_logger"]
